------------------------------
CHANGE HISTORY for coverage.py
------------------------------

Version 3.0b2
-------------

Continued refactoring.

- coverage.annotate_file is no longer available.

- Programs executed with -x now behave more as they should, for example,
  __file__ has the correct value.

- Removed the undocumented cache_file argument to coverage.usecache().

- .coverage data files have a new format.


Version 3.0b1, 7 March 2009
---------------------------

Major overhaul.

- Coverage.py is now a package rather than a module, so the name is a bit of a
  misnomer, since there is no longer a file named coverage.py.  Functionality
  has been split into classes.

- The trace function is implemented in C for speed.

- Executable lines are identified by reading the line number tables in the
  compiled code, removing a great deal of complicated analysis code.
  
- The singleton coverage object is only created if the module-level functions
  are used.  This maintains the old interface while allowing better
  programmatic use of coverage.py.
  
- Minimum supported Python version is 2.3.

- Precisely which lines are considered executable has changed in some cases.
  Therefore, your coverage stats may also change.
  

Version 2.85, 14 September 2008
-------------------------------

- Add support for finding source files in eggs. Don't check for
  morf's being instances of ModuleType, instead use duck typing so that
  pseudo-modules can participate. Thanks, Imri Goldberg.
  
- Use os.realpath as part of the fixing of filenames so that symlinks won't
  confuse things. Thanks, Patrick Mezard.


Version 2.80, 25 May 2008
-------------------------

- Open files in rU mode to avoid line ending craziness. Thanks, Edward Loper.


Version 2.78, 30 September 2007
-------------------------------

- Don't try to predict whether a file is Python source based on the extension.
  Extensionless files are often Pythons scripts. Instead, simply parse the file